prevent horizontal page overflow

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -8,6 +8,7 @@
 	-ms-user-select: none; /* IE10+ */
 	-o-user-select: none;
 	user-select: none;
+  overflow: hidden;
 }
 
 .equipped, .searchResults {
@@ -15,4 +16,14 @@
 	justify-content: center;
 	align-items: center;
 	overflow-y: auto;
+}
+
+html {
+    overflow-x: hidden;
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    overflow: auto;
 }
